src/parse/snapshots/script_lang__parse__test__r#fn__empty.snap
---
source: src/parse/test.rs
assertion_line: 125
expression: ast

---
FnDecl(
    FnDecl {
        span: Span {
            start: 0,
            end: 0,
        },
        name: Ident {
            sym: "empty",
            span: Span {
                start: 0,
                end: 0,
            },
        },
        params: [],
        body: Block {
            stmts: [],
            span: Span {
                start: 0,
                end: 0,
            },
        },
    },
)
